--- a/index.html
+++ b/index.html
@@ -139,6 +139,11 @@
         .week-block { margin-bottom: 2rem; }
         .week-title { background: linear-gradient(90deg, var(--sidebar-bg), var(--primary-color)); color: white; padding: 0.75rem 1.5rem; border-radius: 8px; margin-bottom: 1.5rem; font-weight: 700; box-shadow: 0 4px 8px rgba(0,0,0,0.1); }
         #content-display .session-grid { display: grid; gap: 1rem; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); }
+@media (min-width: 1200px) {
+    #content-display .session-grid {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}        
         #content-display .session-card-header { flex-wrap: nowrap; justify-content: space-between; align-items: center; gap: 1rem; }
         #content-display .completion-date-container { display: inline-flex; flex-shrink: 0; align-items: center; white-space: nowrap; }
 
